--- a/src/components/ShotedLinks.astro
+++ b/src/components/ShotedLinks.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<div class="w-[800px] mx-auto">
-    <ul class="flex flex-col gap-4">
+<div class="w-[800px] mx-auto" id="shorted_links">
+    <!-- <ul class="flex flex-col gap-4">
         <li
             class="flex items-center bg-white justify-between py-2 px-4 rounded"
         >
@@ -40,5 +40,5 @@
                 >
             </div>
         </li>
-    </ul>
+    </ul> -->
 </div>
