--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import ShortedLinks from "../components/ShotedLinks.astro";
 import Cards from "../components/Cards.astro";
 import Logo from "../components/Logo.astro";
 const key = import.meta.env.URLBAE_LINK;
@@ -50,7 +49,9 @@ const key = import.meta.env.URLBAE_LINK;
 		</div>
 
 		<div class="pt-20 px-10 pb-32 bg-my-gray-white">
-			<ShortedLinks />
+			<div class="w-[800px] mx-auto" id="shorted_links">
+    
+			</div>
 			<div class="mx-auto my-28 w-96 text-center">
 				<h2 class="font-bold text-4xl">Advanced Statistics</h2>
 				<small class="text-my-gray">
