testing public path

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const key = import.meta.env.URLBAE_LINK;
 				</div>
 				<img
 					class="-mr-28 xl:mr-0"
-					src="/images/illustration-working.svg"
+					src="./images/illustration-working.svg"
 					width={733}
 					height={482}
 					alt="working illustration"
