changing images' path

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,7 +32,7 @@ const { title } = Astro.props;
 			* {
 				font-size: 18px;
 				box-sizing: border-box;
-				font-family: Poppins;
+				font-family: Poppins, sans-serif;
 			}
 
 			.attribution {
