--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -130,28 +130,28 @@ const key = import.meta.env.URLBAE_LINK;
 			<a href="#"
 				><img
 					class="w-7 h-7 fill-my-cyan"
-					src="/images/icon-facebook.svg"
+					src="./images/icon-facebook.svg"
 					alt="Facebook"
 				/></a
 			>
 			<a href="#"
 				><img
 					class="w-7 h-7 hover:bg-my-cyan"
-					src="/images/icon-twitter.svg"
+					src="./images/icon-twitter.svg"
 					alt="Twitter"
 				/></a
 			>
 			<a href="#"
 				><img
 					class="w-7 h-7 hover:bg-my-cyan"
-					src="/images/icon-pinterest.svg"
+					src="./images/icon-pinterest.svg"
 					alt="Pinterest"
 				/></a
 			>
 			<a href="#"
 				><img
 					class="w-7 h-7 hover:bg-my-cyan"
-					src="/images/icon-instagram.svg"
+					src="./images/icon-instagram.svg"
 					alt="Instagram"
 				/></a
 			>
@@ -162,7 +162,7 @@ const key = import.meta.env.URLBAE_LINK;
 <style >
 	.form-container,
 	.prefooter {
-		background-image: url("/images/bg-boost-desktop.svg");
+		background-image: url("./images/bg-boost-desktop.svg");
 		background-repeat: no-repeat;
 		background-position: 75% 84%;
 	}
