--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -13,7 +13,7 @@
 			class="bg-my-dark-violet rounded-full absolute -translate-y-1/2 p-5"
 		>
 			<img
-				src="/images/icon-brand-recognition.svg"
+				src="./images/icon-brand-recognition.svg"
 				alt="brand recognition"
 			/>
 		</figure>
@@ -33,7 +33,7 @@
 			class="bg-my-dark-violet rounded-full absolute -translate-y-1/2 p-5"
 		>
 			<img
-				src="/images/icon-brand-recognition.svg"
+				src="./images/icon-brand-recognition.svg"
 				alt="brand recognition"
 			/>
 		</figure>
@@ -53,7 +53,7 @@
 			class="bg-my-dark-violet rounded-full absolute -translate-y-1/2 p-5"
 		>
 			<img
-				src="/images/icon-brand-recognition.svg"
+				src="./images/icon-brand-recognition.svg"
 				alt="brand recognition"
 			/>
 		</figure>
